[gd_scene load_steps=16 format=3 uid="uid://bhc01pr3kyhym"]

[ext_resource type="Theme" uid="uid://cfp22mav71a3h" path="res://Utility/Options/options_menu_theme.tres" id="1_wwb16"]
[ext_resource type="Script" uid="uid://c2kfomcyao3nb" path="res://Utility/Options/options_menu.gd" id="1_y8udk"]
[ext_resource type="Texture2D" uid="uid://bvwmek25680dv" path="res://Assets/panel-border-008.png" id="3_0ami3"]
[ext_resource type="PackedScene" uid="uid://dk3j16ukdj05c" path="res://Utility/Keybinds/keybind_menu.tscn" id="3_u51tj"]
[ext_resource type="Script" uid="uid://dm1tfjpwgnum" path="res://Utility/Options/option_container.gd" id="4_4eplt"]
[ext_resource type="Script" uid="uid://tutvndbjn44a" path="res://Utility/Options/settings_container.gd" id="4_8nr3t"]
[ext_resource type="Texture2D" uid="uid://cl3anb1cwywds" path="res://Assets/selection_arrow_9x9.png" id="5_i6viq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ql6ir"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 4
anti_aliasing = false

[sub_resource type="Animation" id="Animation_sq4jd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-309, 158)]
}

[sub_resource type="Animation" id="Animation_dla8e"]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-309, 158), Vector2(487, 158)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vflxl"]
_data = {
&"RESET": SubResource("Animation_sq4jd"),
&"slide_in": SubResource("Animation_dla8e")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnm3g"]
bg_color = Color(0.0737847, 0.235189, 0.442708, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3egnv"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 4

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4eplt"]
texture = ExtResource("3_0ami3")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqqkj"]
bg_color = Color(0.220866, 0.71875, 0.267543, 1)
border_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="OptionsMenu" type="Control" node_paths=PackedStringArray("keybind_menu")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wwb16")
script = ExtResource("1_y8udk")
do_center_window = true
keybind_menu = NodePath("KeybindMenu")
metadata/_edit_lock_ = true

[node name="OptionsPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -949.0
offset_top = -202.0
offset_right = -657.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ql6ir")

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptionsPanel"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_vflxl")
}

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="Title" type="MarginContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Panel" type="Panel" parent="OptionsPanel/MarginContainer/VBoxContainer/Title"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qnm3g")

[node name="Label" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"LabelTitle"
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="OptionsPanel/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4

[node name="Options" type="MarginContainer" parent="OptionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 2

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3egnv")
follow_focus = true
scroll_vertical = 100
scroll_vertical_custom_step = 22.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="SettingsContainer" type="VBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6
script = ExtResource("4_8nr3t")

[node name="AudioTitle" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxTexture_4eplt")
text = "AUDIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVol" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("MasterSlider")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MasterVol"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Master" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MasterVol"]
layout_mode = 2
size_flags_horizontal = 2
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MasterVol"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 1.0
step = 0.1
value = 0.5
scrollable = false

[node name="MusicVol" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("MusicSlider")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MusicVol"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Music" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MusicVol"]
layout_mode = 2
size_flags_horizontal = 2
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/MusicVol"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_uqqkj")
max_value = 1.0
step = 0.1
value = 0.5
scrollable = false

[node name="SfxVol" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("SFXSlider")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/SfxVol"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="SFX" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/SfxVol"]
layout_mode = 2
size_flags_horizontal = 2
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/SfxVol"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_uqqkj")
max_value = 1.0
step = 0.1
value = 0.5
scrollable = false

[node name="Mute" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("MuteBtn")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Mute"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Mute" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Mute"]
layout_mode = 2
size_flags_horizontal = 2
text = "Mute"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteBtn" type="CheckBox" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Mute"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10

[node name="ResolutionTitle" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4eplt")
text = "RESOLUTION"
horizontal_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
tooltip_text = "Toggle windowed fullscreen"
script = ExtResource("4_4eplt")
option_button = NodePath("FullscreenBtn")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Fullscreen"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Fullscreen" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 2
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenBtn" type="CheckBox" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Fullscreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10

[node name="Maximize" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
tooltip_text = "Toggle window maximize"
script = ExtResource("4_4eplt")
option_button = NodePath("MaximizeBtn")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Maximize"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Maximize" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Maximize"]
layout_mode = 2
size_flags_horizontal = 2
text = "Maximize"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaximizeBtn" type="CheckBox" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Maximize"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10

[node name="Resolutions" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("ResolutionBtn")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Resolutions"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Resolution" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Resolutions"]
layout_mode = 2
size_flags_horizontal = 2
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionBtn" type="OptionButton" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Resolutions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
selected = 0
item_count = 1
popup/item_0/id = 0

[node name="QualityTitle" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_4eplt")
text = "QUALITY"
horizontal_alignment = 1

[node name="Vsync" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("VsyncBtn")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Vsync"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Vsync" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Vsync"]
layout_mode = 2
size_flags_horizontal = 2
text = "Vsync"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VsyncBtn" type="CheckBox" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Vsync"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 10

[node name="Brightness" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("BrightnessSlider")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Brightness"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Brightness" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Brightness"]
layout_mode = 2
size_flags_horizontal = 2
text = "Brightness"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrightnessValue" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Brightness"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "1.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BrightnessSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/Brightness"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0
scrollable = false

[node name="ScalerOptions" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
tooltip_text = "Resolution scaling mode
BILINEAR - Default mode
AMD FSR - AMD FidelityFX Super Resolution 2.2"
script = ExtResource("4_4eplt")
option_button = NodePath("ScalerOptions")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScalerOptions"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Scaler" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScalerOptions"]
layout_mode = 2
size_flags_horizontal = 2
text = "Scaler"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScalerOptions" type="OptionButton" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScalerOptions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
text_overrun_behavior = 1
selected = 0
item_count = 3
popup/item_0/text = "SCALER"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "BILINEAR"
popup/item_1/id = 1
popup/item_2/text = "AMD FSR"
popup/item_2/id = 2

[node name="FsrContainer" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "AMD FSR preset values"
script = ExtResource("4_4eplt")
option_button = NodePath("FSROptions")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/FsrContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="FSR" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/FsrContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "FSR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FSROptions" type="OptionButton" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/FsrContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
text_overrun_behavior = 1
selected = 0
item_count = 5
popup/item_0/text = "FSR Options"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Performance"
popup/item_1/id = 1
popup/item_2/text = "Balanced"
popup/item_2/id = 2
popup/item_3/text = "Quality"
popup/item_3/id = 3
popup/item_4/text = "Ultra Quality"
popup/item_4/id = 4

[node name="ScaleSlider" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
tooltip_text = "Resolution scale as percent of current resolution.
When scaler is set to 'AMD FSR', this value is set from the FSR options."
script = ExtResource("4_4eplt")
option_button = NodePath("ScaleSlider")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScaleSlider"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Label" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScaleSlider"]
layout_mode = 2
size_flags_horizontal = 2
text = "Scale"

[node name="Scale" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScaleSlider"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "100%"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScaleSlider" type="HSlider" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/ScaleSlider"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 50.0
max_value = 200.0
step = 5.0
value = 120.0
scrollable = false
ticks_on_borders = true

[node name="LanguageOption" type="HBoxContainer" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer" node_paths=PackedStringArray("option_button")]
layout_mode = 2
script = ExtResource("4_4eplt")
option_button = NodePath("LanguageOptions")

[node name="SelectionArrow" type="TextureRect" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/LanguageOption"]
visible = false
layout_mode = 2
texture = ExtResource("5_i6viq")
stretch_mode = 5

[node name="Language" type="Label" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/LanguageOption"]
layout_mode = 2
size_flags_horizontal = 2
text = "Language"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageOptions" type="OptionButton" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/LanguageOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
text_overrun_behavior = 1

[node name="KeybindsBtn" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_type_variation = &"ButtonGreen"
theme_override_font_sizes/font_size = 20
text = "Keybinds"
text_overrun_behavior = 1

[node name="HSeparator2" type="HSeparator" parent="OptionsPanel/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4

[node name="BackBtn" type="Button" parent="OptionsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_top = NodePath("../Options/ScrollContainer/MarginContainer/SettingsContainer/KeybindsBtn")
theme_type_variation = &"ButtonGreen"
theme_override_font_sizes/font_size = 20
text = "Close"

[node name="KeybindMenu" parent="." instance=ExtResource("3_u51tj")]
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="OptionsPanel" to="." method="_on_options_panel_visibility_changed"]
[connection signal="pressed" from="OptionsPanel/MarginContainer/VBoxContainer/Options/ScrollContainer/MarginContainer/SettingsContainer/KeybindsBtn" to="." method="_on_keybind_btn_pressed"]
